[package]
name = "htmrx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-to-string-macro = "0.2.4"
once_cell = "1.16.0"
http = "0.2.8"
strum = { version = "0.24.1", features = ["derive"] }
rocket = "0.5.0-rc.2"
