[package]
name = "htmrx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
headers = { version = "0.3.8" }
html-to-string-macro = "0.2.4"
once_cell = "1.16.0"
strum = { version = "0.24.1", features = ["derive"] }
tracing-subscriber = "0.3.16"
